--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 		<footer>
 			<p>All copy rights reserved @belgrade</p>
 		</footer>
-		<script src="ind.js">
-		</script>
+		<script src="ind.js"> </script>
 
 
 </body>
