--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="card-container">
 
 			<div class="card">
-				<img  id="img1" src="Kalemegdan.jpg" onclick="changeImage()">
+				<img  id="img1" src="Kalemegdan.jpg" onclick="changeImage()"/>
 				<div class="card-content">
 					<h3 id="Kalemegdan">Kalemegdan</h3>
 					<p>The Kalemegdan Park (Serbian: Калемегдански парк / Kalemegdanski park), or simply Kalemegdan (Serbian Cyrillic: Калемегдан) is the largest park and the most important historical monument in Belgrade.</p>
@@ -43,7 +43,7 @@
 			</div>
 
 			<div class="card">
-				<img id="img2" src="Mihajlova.jpg" onclick="changeImage1()">
+				<img id="img2" src="Mihajlova.jpg" onclick="changeImage1()"/>
 				<div class="card-content">
 					<h3 id="Knez-Mihajlova">Knez Mihailova</h3>
 					<p>Knez Mihailova Street (Serbian: Кнез Михаилова улица, romanized: Knez Mihailova ulica, officially: Улица кнеза Михаила, Ulica kneza Mihaila) is the main pedestrian and shopping zone in Belgrade, and is protected by law as one of the oldest and most valuable landmarks of the city.</p>
@@ -52,7 +52,7 @@
 			</div>
 
 			<div class="card">
-				<img id="img3" src="Skadarlija.jpg" onclick="changeImage2()">
+				<img id="img3" src="Skadarlija.jpg" onclick="changeImage2()"/>
 				<div class="card-content">
 					<h3 id="Skadarlija">Skadarlija</h3>
 					<p>Skadarlija (Serbian Cyrillic: Скадарлија) is a vintage street, an urban neighborhood and former municipality of Belgrade, Serbia, located in the Belgrade municipality of Stari Grad (Old Town).</p>
@@ -62,7 +62,7 @@
 
 
 			<div class="card">
-				<img id="img4" src="Avala.jpg" onclick="changeImage3()">
+				<img id="img4" src="Avala.jpg" onclick="changeImage3()"/>
 				<div class="card-content">
 					<h3 id="Avala">Avala Mountain</h3>
 					<p>Avala is a mountain in Serbia, overlooking Belgrade. It is situated in the south-eastern corner of the city and provides a great panoramic view of Belgrade. </p>
@@ -71,7 +71,7 @@
 			</div>
 
 			<div class="card">
-				<img id="img5" src="Ada1.jpg" onclick="changeImage4()">
+				<img id="img5" src="Ada1.jpg" onclick="changeImage4()"/>
 				<div class="card-content">
 					<h3 id="Ada">Ada Ciganlija</h3>
 					<p>Ada Ciganlija  colloquially shortened to Ada, is a river island that has artificially been turned into a peninsula, located in the Sava River's course through central Belgrade, Serbia.</p>
