--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<footer>
 			<p>All copy rights reserved @belgrade</p>
 		</footer>
-		<script src="ind.js">
+		<script src="Ind.js">
 		</script>
 
 
