--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>City of Belgrade</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script href="Ind.js"></script>
+	<script src="Ind.js"></script>
 	
 </head>
 	
