--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 				<script type="text/javascript">
 					
 					function changeImage() {
-	                    var img1=document.getElementById('img1');
-	                    if (img1.src.match('Kalemegdan.jpg')) {
-	                     	img1.src="kale2.jpg";
+	                    var im=document.getElementById('img1');
+	                    if (im.src.match('Kalemegdan.jpg')) {
+	                     	im.src="kale2.jpg";
 	                   }else{
-		                    img1.src="Kalemegdan.jpg";
+		                    im.src="Kalemegdan.jpg";
 	                   }
                     }
 				</script>
@@ -58,11 +58,11 @@
 				<img id="img2" src="Mihajlova.jpg" onclick="changeImage1()"/>
 				<script type="text/javascript">
 					function changeImage1() {
-	                   var img2=document.getElementById('img2');
-		               if (img2.src.match('Mihajlova.jpg')) {
-		                   img2.src="knez2.jpg";
+	                   var ig=document.getElementById('img2');
+		               if (ig.src.match('Mihajlova.jpg')) {
+		                   ig.src="knez2.jpg";
 	                   }else{
-		                   img2.src="Mihajlova.jpg";
+		                   ig.src="Mihajlova.jpg";
 	                     }
 	
                        }
@@ -78,11 +78,11 @@
 				<img id="img3" src="Skadarlija.jpg" onclick="changeImage2()"/>
 				<script type="text/javascript">
 					function changeImage2() {
-	                   var img3=document.getElementById('img3');
-		               if (img3.src.match('Skadarlija.jpg')) {
-		                   img3.src="skal2.jpg";
+	                   var ir=document.getElementById('img3');
+		               if (ir.src.match('Skadarlija.jpg')) {
+		                   ir.src="skal2.jpg";
 	                   }else{
-	                    	img3.src="Skadarlija.jpg";
+	                    	ir.src="Skadarlija.jpg";
 	                    }
                      }
 				</script>
@@ -98,11 +98,11 @@
 				<img id="img4" src="Avala.jpg" onclick="changeImage3()"/>
 				<script type="text/javascript">
 					function changeImage3() {
-	                 var img4=document.getElementById('img4');
-		              if (img4.src.match('Avala.jpg')) {
-		                  img4.src="avl2.jpg";
+	                 var ih=document.getElementById('img4');
+		              if (ih.src.match('Avala.jpg')) {
+		                  ih.src="avl2.jpg";
 	                 }else{
-		                  img4.src="Avala.jpg";
+		                  ih.src="Avala.jpg";
                    	}	
                    }
 				</script>
@@ -117,11 +117,11 @@
 				<img id="img5" src="Ada1.jpg" onclick="changeImage4()"/>
 				<script type="text/javascript">
 					function changeImage4() {
-	                  var img5=document.getElementById('img5');
-		            	if (img5.src.match('Ada1.jpg')) {
-		                    img5.src="ada2.jpg";
+	                  var il=document.getElementById('img5');
+		            	if (il.src.match('Ada1.jpg')) {
+		                    il.src="ada2.jpg";
 	                   }else{
-		                    img5.src="Ada1.jpg";
+		                    il.src="Ada1.jpg";
 	                     }
 	
                        }
